DEV:  integrate root_to_dev @1659
[git-p4: depot-paths = "//open/dev/thirdparty/": change = 1660]

--- a/build.properties
+++ b/build.properties
@@ -11,3 +11,4 @@ dynamicjava.dir=${thirdparty.dir}/dynamicjava
 mdrlibs.dir=${thirdparty.dir}/mdrlibs
 sqlline.dir=${thirdparty.dir}/sqlline
 sqlline.lib.dir=${thirdparty.dir}
+rmijdbc.dir=${thirdparty.dir}/RmiJdbc
