--- a/build.properties
+++ b/build.properties
@@ -12,3 +12,4 @@ mdrlibs.dir=${thirdparty.dir}/mdrlibs
 sqlline.dir=${thirdparty.dir}/sqlline
 sqlline.lib.dir=${thirdparty.dir}
 rmijdbc.dir=${thirdparty.dir}/RmiJdbc
+csvjdbc.dir=${thirdparty.dir}/csvjdbc
