--- a/build.properties
+++ b/build.properties
@@ -13,3 +13,4 @@ sqlline.dir=${thirdparty.dir}/sqlline
 sqlline.lib.dir=${thirdparty.dir}
 rmijdbc.dir=${thirdparty.dir}/RmiJdbc
 csvjdbc.dir=${thirdparty.dir}/csvjdbc
+janino.dir=${thirdparty.dir}/janino
