--- a/build.properties
+++ b/build.properties
@@ -14,3 +14,4 @@ sqlline.lib.dir=${thirdparty.dir}
 rmijdbc.dir=${thirdparty.dir}/RmiJdbc
 csvjdbc.dir=${thirdparty.dir}/csvjdbc
 janino.dir=${thirdparty.dir}/janino
+openjava.dir=${thirdparty.dir}/OpenJava
