--- a/build.properties
+++ b/build.properties
@@ -15,3 +15,4 @@ rmijdbc.dir=${thirdparty.dir}/RmiJdbc
 csvjdbc.dir=${thirdparty.dir}/csvjdbc
 janino.dir=${thirdparty.dir}/janino
 openjava.dir=${thirdparty.dir}/OpenJava
+hsqldb.dir=${thirdparty.dir}/hsqldb
