THIRDPARTY:  add JGraph, JGraph addons, and JGraphT
[git-p4: depot-paths = "//open/dt/dev/thirdparty/": change = 3232]

--- a/build.properties
+++ b/build.properties
@@ -16,3 +16,6 @@ csvjdbc.dir=${thirdparty.dir}/csvjdbc
 janino.dir=${thirdparty.dir}/janino
 openjava.dir=${thirdparty.dir}/OpenJava
 hsqldb.dir=${thirdparty.dir}/hsqldb
+jgrapht.dir=${thirdparty.dir}/jgrapht
+jgraph.dir=${thirdparty.dir}/jgraph
+jgraphaddons.dir=${thirdparty.dir}/jgraphaddons
