BOOTSTRAP/THIRDPARTY/SAFFRON/FENNEL/FARRAGO: many changes in preparation for Eigenbase 0.5 release; in particular, update distBuild.sh, add release properties file, eliminate runtime dependencies on JUnit, add master release build script (not yet tested); update COPYING files; update Fennel version to 0.5, and include it in shared library names
[git-p4: depot-paths = "//open/dt/dev/thirdparty/": change = 3346]

--- a/build.properties
+++ b/build.properties
@@ -19,3 +19,6 @@ hsqldb.dir=${thirdparty.dir}/hsqldb
 jgrapht.dir=${thirdparty.dir}/jgrapht
 jgraph.dir=${thirdparty.dir}/jgraph
 jgraphaddons.dir=${thirdparty.dir}/jgraphaddons
+stlport.dir=${thirdparty.dir}/stlport
+boost.dir=${thirdparty.dir}/boost
+icu.dir=${thirdparty.dir}/icu
