THIRDPARTY/FENNEL/FARRAGO/SAFFRON:  replace MonRG with ResGen
[git-p4: depot-paths = "//open/dt/dev/thirdparty/": change = 3372]

--- a/build.properties
+++ b/build.properties
@@ -22,3 +22,4 @@ jgraphaddons.dir=${thirdparty.dir}/jgraphaddons
 stlport.dir=${thirdparty.dir}/stlport
 boost.dir=${thirdparty.dir}/boost
 icu.dir=${thirdparty.dir}/icu
+resgen.dir=${thirdparty.dir}/resgen
