THIRDPARTY:  add retroweaver
[git-p4: depot-paths = "//open/dt/dev/thirdparty/": change = 3778]

--- a/build.properties
+++ b/build.properties
@@ -23,3 +23,4 @@ stlport.dir=${thirdparty.dir}/stlport
 boost.dir=${thirdparty.dir}/boost
 icu.dir=${thirdparty.dir}/icu
 resgen.dir=${thirdparty.dir}/resgen
+retroweaver.dir=${thirdparty.dir}/retroweaver
