THIRDPARTY: Add log4j and jdbcappender to thirdparty
[git-p4: depot-paths = "//open/dt/dev/thirdparty/": change = 4199]

--- a/build.properties
+++ b/build.properties
@@ -24,3 +24,6 @@ boost.dir=${thirdparty.dir}/boost
 icu.dir=${thirdparty.dir}/icu
 resgen.dir=${thirdparty.dir}/resgen
 retroweaver.dir=${thirdparty.dir}/retroweaver
+jdbcappender.dir=${thirdparty.dir}/jdbcappender
+log4j.dir=${thirdparty.dir}/log4j
+
