THIRDPARTY: add jtds jdbc driver
[git-p4: depot-paths = "//open/lu/dev/thirdparty/": change = 4603]

--- a/build.properties
+++ b/build.properties
@@ -25,4 +25,4 @@ resgen.dir=${thirdparty.dir}/resgen
 retroweaver.dir=${thirdparty.dir}/retroweaver
 jdbcappender.dir=${thirdparty.dir}/jdbcappender
 log4j.dir=${thirdparty.dir}/log4j
-
+jtds.dir=${thirdparty.dir}/jtds
