FARRAGO: add emma for code coverage
[git-p4: depot-paths = "//open/lu/dev/thirdparty/": change = 5145]

--- a/build.properties
+++ b/build.properties
@@ -26,3 +26,4 @@ retroweaver.dir=${thirdparty.dir}/retroweaver
 jdbcappender.dir=${thirdparty.dir}/jdbcappender
 log4j.dir=${thirdparty.dir}/log4j
 jtds.dir=${thirdparty.dir}/jtds
+emma.dir=${thirdparty.dir}/emma
