FARRAGO/THIRDPARTY:  switch from RmiJdbc to VJDBC for LucidDB and Farrago; RmiJdbc remains available for extension projects which are already using it
[git-p4: depot-paths = "//open/dev/thirdparty/": change = 6785]

--- a/build.properties
+++ b/build.properties
@@ -27,3 +27,4 @@ jdbcappender.dir=${thirdparty.dir}/jdbcappender
 log4j.dir=${thirdparty.dir}/log4j
 jtds.dir=${thirdparty.dir}/jtds
 emma.dir=${thirdparty.dir}/emma
+vjdbc.dir=${thirdparty.dir}/vjdbc
