--- a/build.properties
+++ b/build.properties
@@ -27,3 +27,4 @@ log4j.dir=${thirdparty.dir}/log4j
 jtds.dir=${thirdparty.dir}/jtds
 emma.dir=${thirdparty.dir}/emma
 vjdbc.dir=${thirdparty.dir}/vjdbc
+diffj.dir=${thirdparty.dir}/diffj
