THIRDPARTY/FARRAGO:  add findbugs to thirdparty, and add a corresponding Farrago ant target (must be invoked explicitly for now, and filtering needs to be cleaned up)
[git-p4: depot-paths = "//open/lu/dev/thirdparty/": change = 10626]

--- a/build.properties
+++ b/build.properties
@@ -28,3 +28,4 @@ jtds.dir=${thirdparty.dir}/jtds
 emma.dir=${thirdparty.dir}/emma
 vjdbc.dir=${thirdparty.dir}/vjdbc
 diffj.dir=${thirdparty.dir}/diffj
+findbugs.dir=${thirdparty.dir}/findbugs
