--- a/build.properties
+++ b/build.properties
@@ -8,6 +8,7 @@ jalopy.dir=${thirdparty.dir}/jalopy
 jswat.dir=${thirdparty.dir}/jswat
 dynamicjava.dir=${thirdparty.dir}/dynamicjava
 mdrlibs.dir=${thirdparty.dir}/mdrlibs
+enki.dir=${thirdparty.dir}/enki
 sqlline.dir=${thirdparty.dir}/sqlline
 sqlline.lib.dir=${thirdparty.dir}
 rmijdbc.dir=${thirdparty.dir}/RmiJdbc
