FARRAGO: provide mysql-connector for use with Enki (do not distribute) FARRAGO: initBuild support for alternate repository types FARRAGO: include necessary Enki/Hibernate files in dist/farrago.jar FARRAGO: provide EhCache config for Farrago FARRAGO: allow plugin build script to specify repos storage properties
[git-p4: depot-paths = "//open/dev/thirdparty/": change = 10893]

--- a/build.properties
+++ b/build.properties
@@ -30,3 +30,4 @@ emma.dir=${thirdparty.dir}/emma
 vjdbc.dir=${thirdparty.dir}/vjdbc
 diffj.dir=${thirdparty.dir}/diffj
 findbugs.dir=${thirdparty.dir}/findbugs
+mysql.dir=${thirdparty.dir}/mysql-connector
