--- a/build.properties
+++ b/build.properties
@@ -31,3 +31,4 @@ vjdbc.dir=${thirdparty.dir}/vjdbc
 diffj.dir=${thirdparty.dir}/diffj
 findbugs.dir=${thirdparty.dir}/findbugs
 mysql.dir=${thirdparty.dir}/mysql-connector
+jetty.dir=${thirdparty.dir}/jetty
